{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 36,
  "lineage": "7b8d5d42-b9c9-34d2-61c9-2dac47381e9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:202533525643:instance/i-06e6e923f058b210b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e6e923f058b210b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07aa4041a4bf05c79",
            "private_dns": "ip-172-31-91-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.110",
            "public_dns": "ec2-174-129-111-244.compute-1.amazonaws.com",
            "public_ip": "174.129.111.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05593f710a66e2549",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "bastion_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc221ac8ad5ed2e0",
            "tags": {
              "Name": "bastion",
              "createdBy": "terraform"
            },
            "tags_all": {
              "Name": "bastion",
              "createdBy": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b8ca2211f2d30c0"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202533525643:security-group/sg-01b8ca2211f2d30c0",
            "description": "security group for bastion server",
            "egress": [],
            "id": "sg-01b8ca2211f2d30c0",
            "ingress": [],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "202533525643",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg",
              "createdBy": "terraform : Abrar-2510"
            },
            "tags_all": {
              "Name": "bastion-sg",
              "createdBy": "terraform : Abrar-2510"
            },
            "timeouts": null,
            "vpc_id": "vpc-050d009c103a9e810"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_sg_inbound_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1948892092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b8ca2211f2d30c0",
            "security_group_rule_id": "sgr-0f5f36c8aaab0af70",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_inbound_allow_outbound_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-846104055",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01b8ca2211f2d30c0",
            "security_group_rule_id": "sgr-0e39671e99c38e8b9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    }
  ]
}